[package]
name = "commander-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["rustls"] }
once_cell = "1.13.1"
rand = "0.8.5"
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
